# dnsync

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: auth.rs  config.rs  main.rs  zone.rs
