[package]
name = "dnsync"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "^0.15.0"
env_logger = "^0.11.3"
log = "^0.4.21"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
lapin = "^2.3.4"
futures-lite = "2.3.0"
chrono = "0.4.38"
async-trait = "0.1.80"
tracing-subscriber = "0.3.18"