[package]
name = "dnsync"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "^0.15"
env_logger = "^0.11"
log = "^0.4"
tokio = { version = "^1.38", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
lapin = "^2.3"
futures-lite = "^2.3"
chrono = "^0.4"
async-trait = "^0.1"
tracing-subscriber = "^0.3"

# Memory safety in rust https://github.com/rust-lang/rust/pull/125360
zerovec = "^0.10.4"
zerovec-derive = "^0.10.3"